// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component should be Large 1`] = `
<DocumentFragment>
  <section
    class="section is-large"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Section component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <section
    class="section other-class this-is-a-test"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Section component should render 1`] = `
<DocumentFragment>
  <section
    class="section"
  />
</DocumentFragment>
`;

exports[`Section component should render as nav element 1`] = `
<DocumentFragment>
  <nav
    class="section"
  >
    <p>
      Default
    </p>
  </nav>
</DocumentFragment>
`;

exports[`Section component should use inline styles 1`] = `
<DocumentFragment>
  <section
    class="section"
    style="height: 250px;"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;
